compiler/tests/fixtures/invalid/semantics/salience_role_non_character.viv
// Action with per-role salience referencing a non-character role

action bad-salience:
    roles:
        @actor:
            as: initiator
        @place:
            as: location
            from: @actor.location
    saliences:
        roles:
            @place: #HIGH
